Forenkle rapporteringsperioder til å bare svare med UUID til korrigeringer
